--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@reach/combobox": "^0.10.1",
+    "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.4.1",
     "autoprefixer": "^10.4.0",
     "core-js": "^3.6.4",
